# path-compactor

./: Cargo.toml  README.md
src/: compactor.rs  config.rs  main.rs
