[package]
name = "path-compactor"
version = "0.1.3"
authors = ["Tyler <tyler@modem.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0"
regex = "1.6"
lazy_static = "1.4.0"
clap = "4.1.4"

[profile.release]
strip = true
lto = true
